--- a/django_chat/requirements.txt
+++ b/django_chat/requirements.txt
@@ -15,6 +15,8 @@ dj-database-url==0.5.0
 Django==3.2.8
 django-crispy-forms==1.13.0
 django-heroku==0.3.1
+django-redis==5.0.0
+gunicorn==20.1.0
 hiredis==2.0.0
 hyperlink==21.0.0
 idna==3.3
@@ -26,9 +28,12 @@ pyasn1-modules==0.2.8
 pycparser==2.20
 pyOpenSSL==21.0.0
 pytz==2021.3
+redis==3.5.3
 service-identity==21.1.0
 six==1.16.0
 sqlparse==0.4.2
+Twisted==21.7.0
+twisted-iocpsupport==1.0.2
 txaio==21.2.1
 typing-extensions==3.10.0.2
 whitenoise==5.3.0
