--- a/django_chat/Procfile
+++ b/django_chat/Procfile
@@ -1,1 +1,1 @@
-web: daphne django_chat.asgi:application --port 8001 --bind 0.0.0.0 -v2
+web: daphne django_chat.asgi:application --port $PORT --bind 0.0.0.0 -v2
